; ModuleID = '/home/carl/AnghaBench/esp-idf/components/lwip/port/esp32/freertos/extr_sys_arch.c_sys_mbox_trypost_fromisr.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/lwip/port/esp32/freertos/extr_sys_arch.c_sys_mbox_trypost_fromisr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@pdFALSE = common dso_local global i64 0, align 8
@pdTRUE = common dso_local global i64 0, align 8
@ERR_NEED_SCHED = common dso_local global i32 0, align 4
@ERR_OK = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [20 x i8] c"mbox trypost failed\00", align 1
@errQUEUE_FULL = common dso_local global i64 0, align 8
@ERR_MEM = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @sys_mbox_trypost_fromisr(%struct.TYPE_3__** %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_3__**, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  store %struct.TYPE_3__** %0, %struct.TYPE_3__*** %4, align 8
  store i8* %1, i8** %5, align 8
  %8 = load i64, i64* @pdFALSE, align 8
  store i64 %8, i64* %7, align 8
  %9 = load %struct.TYPE_3__**, %struct.TYPE_3__*** %4, align 8
  %10 = load %struct.TYPE_3__*, %struct.TYPE_3__** %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = call i64 @xQueueSendFromISR(i32 %12, i8** %5, i64* %7)
  store i64 %13, i64* %6, align 8
  %14 = load i64, i64* %6, align 8
  %15 = load i64, i64* @pdTRUE, align 8
  %16 = icmp eq i64 %14, %15
  br i1 %16, label %17, label %25

17:                                               ; preds = %2
  %18 = load i64, i64* %7, align 8
  %19 = load i64, i64* @pdTRUE, align 8
  %20 = icmp eq i64 %18, %19
  br i1 %20, label %21, label %23

21:                                               ; preds = %17
  %22 = load i32, i32* @ERR_NEED_SCHED, align 4
  store i32 %22, i32* %3, align 4
  br label %32

23:                                               ; preds = %17
  %24 = load i32, i32* @ERR_OK, align 4
  store i32 %24, i32* %3, align 4
  br label %32

25:                                               ; preds = %2
  %26 = load i64, i64* %6, align 8
  %27 = load i64, i64* @errQUEUE_FULL, align 8
  %28 = icmp eq i64 %26, %27
  %29 = zext i1 %28 to i32
  %30 = call i32 @LWIP_ASSERT(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0), i32 %29)
  %31 = load i32, i32* @ERR_MEM, align 4
  store i32 %31, i32* %3, align 4
  br label %32

32:                                               ; preds = %25, %23, %21
  %33 = load i32, i32* %3, align 4
  ret i32 %33
}

declare dso_local i64 @xQueueSendFromISR(i32, i8**, i64*) #1

declare dso_local i32 @LWIP_ASSERT(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
